--- a/movie-consumer-user/pom.xml
+++ b/movie-consumer-user/pom.xml
@@ -50,6 +50,12 @@
         </dependency>
         <!-- spring boot end-->
 
+        <!-- spring cloud start -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka</artifactId>
+        </dependency>
+        <!-- spring cloud end -->
         <!-- lombok start -->
         <dependency>
             <groupId>org.projectlombok</groupId>
