--- a/movie-consumer-user/src/main/resources/application.yml
+++ b/movie-consumer-user/src/main/resources/application.yml
@@ -1,2 +1,12 @@
 server:
   port: 8010
+spring:
+  application:
+    name: movie-consumer-user
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    # 将自己的IP注册到Eureka中
+    prefer-ip-address: true
