--- a/movie-provider-user/pom.xml
+++ b/movie-provider-user/pom.xml
@@ -56,6 +56,10 @@
         <!-- spring boot end-->
 
         <!-- spring cloud start -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka</artifactId>
+        </dependency>
         <!-- spring cloud end -->
 
         <!-- mysql start-->
