--- a/movie-consumer-user/src/main/resources/application.yml
+++ b/movie-consumer-user/src/main/resources/application.yml
@@ -11,3 +11,6 @@ eureka:
   instance:
     # register own IP in eureka
     prefer-ip-address: true
+#movie-provider-user:
+#  ribbon:
+#    NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
