基于Fegin实现声明式REST调用

--- a/movie-consumer-user/pom.xml
+++ b/movie-consumer-user/pom.xml
@@ -56,6 +56,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-eureka</artifactId>
         </dependency>
+        <!-- Feign -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-fegin</artifactId>
+        </dependency>
         <!-- spring cloud end -->
 
         <!-- lombok start -->
